--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,17 +1,17 @@
 NAME = PhoneBook
 
-SRCS =  $(wildcard ./*.cpp)
+SRCS =  $(wildcard ./src/*.cpp)
 
 OBJS = $(SRCS:.c=.o)
 
-INCLUDES =
+INCLUDES = -I $(wildcard ./src/*.hpp)
 
 CC = c++ -Wall -Wextra -Werror -std=c++98
 
 all : $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) -o $(NAME) $(OBJS)
+	@$(CC) -I $(INCLUDES) -o $(NAME) $(OBJS)
 
 clean :
 	@rm -rf $(wildcard ./*.o)
