--- a/01/ex03/Makefile
+++ b/01/ex03/Makefile
@@ -6,17 +6,20 @@ OBJS = $(SRCS:.c=.o)
 
 INCLUDES = -I $(wildcard ./inc/*.hpp)
 
-CC = c++ -Wall -Wextra -Werror -std=c++98
+CC = g++ -Wall -Wextra -Werror -std=c++98
 
 all : $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) -I $(INCLUDES) -o $(NAME) $(OBJS)
+	@$(CC) $(INCLUDES) $(OBJS)
+
+%.o: %.c
+	@$(CC) $(CFLAGS) $< -c -o $@
 
 clean :
-	@rm -rf $(wildcard ./*.o)
-	@rm -rf $(wildcard ./*/*.o)
-	@rm -rf $(wildcard ./*/*/*.o)
+	@rm -rf $(wildcard ./*.gch.*)
+	@rm -rf $(wildcard ./*/*.gch.*)
+	@rm -rf $(wildcard ./*/*/*.gch.*)
 
 fclean : clean
 	@rm -rf $(NAME)
