--- a/06/ex02/Makefile
+++ b/06/ex02/Makefile
@@ -1,27 +1,26 @@
 NAME = Identify
 
-SRCS =  $(wildcard ./src/*.cpp)
+SRC =	$(wildcard ./src/*.cpp)
+INC = $(wildcard ./src/*.hpp)
+OBJ	= $(SRC:.cpp=.o)
 
-OBJS = $(SRCS:.c=.o)
+CC = c++
+FLAG = -Wall -Wextra -Werror -std=c++98
 
-INCLUDES = -I ./inc
+.PHONY: all bonus clean fclean re
 
-CC = c++ -Wall -Wextra -Werror -std=c++98
+all: $(NAME)
 
-all : $(NAME)
+$(NAME): $(OBJ) $(INC)
+	@$(CC) $(FLAG) $(OBJ) -o $(NAME)
 
-$(NAME): $(OBJS)
-	@$(CC) $(INCLUDES) $(OBJS) -o $(NAME)
+%.o: %.cpp %.hpp
+	@$(CC) $(FLAG) -c $< -o $@
 
-%.o: %.c
-	@$(CC) $(CFLAGS) $< -c -o $@
+clean:
+	@rm -f $(OBJ)
 
-clean :
-	@rm -rf $(wildcard ./*.gch.*)
-	@rm -rf $(wildcard ./*/*.gch.*)
-	@rm -rf $(wildcard ./*/*/*.gch.*)
+fclean: clean
+	@rm -f $(NAME)
 
-fclean : clean
-	@rm -rf $(NAME)
-
-re : fclean all
+re: fclean all
